# btor2tools

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  configure.sh  makefile.in  run-coverage-tests.sh  runtests.sh  setup-aiger.sh  setup-deps.sh
.github/workflows/: ci.yml
btor2parser/: btor2parser.c  btor2parser.h
btorsim/: btorsimbv.c  btorsimbv.h  btorsimmain.c  btorsimrng.h
examples/btorsim/: run-examples.sh
src/: CMakeLists.txt  btor2aiger.cpp  btorsplit.cpp  catbtor.c
src/btor2aiger/: btor2aiger.cpp
src/btor2parser/: btor2parser.c  btor2parser.h
src/btorsim/: btorsim.c  btorsim.cpp  btorsimam.cpp  btorsimam.h  btorsimbv.c  btorsimbv.h  btorsimhelpers.cpp  btorsimhelpers.h  btorsimmain.c  btorsimrng.h  btorsimstate.cpp  btorsimstate.h  btorsimvcd.cpp  btorsimvcd.h
util/: btor2stack.h  btorfmtmem.h  btorfmtstack.h
